--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -42,7 +42,7 @@
 </div>
 
 {% if isSearching %}
-  <div id='editUsersBox'>
+  <div>
     <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Users list'|trans }}</h3>
     <div class='pl-3'>
       {% if usersArr %}
@@ -124,7 +124,8 @@
               <th scope='col'>{{ 'Actions'|trans }}</th>
             </tr>
           </thead>
-          <tbody>
+          {# this is the element to reload after a change, don't use the full div so we keep the js working in table headers #}
+          <tbody id='editUsersBox'>
             {% for user in usersArr %}
               <tr {{ user.archived ? "class='bg-medium'" }}>
                 <td><span title='{{ 'User ID'|trans }}' class='badge badge-secondary {{ user.archived ? 'alert-danger' }}'>{{ user.userid }}</span></td>
@@ -181,13 +182,13 @@
                       </div>
                     </div>
                   {% endif %}
+                  {# MORE OPTIONS MENU #}
                   <div class='dropdown'>
                     <div class='clickable p-2 hl-hover-gray text-center rounded' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
                       <i class='fas fa-ellipsis-v'></i>
                     </div>
-                    {# Archive user #}
                     <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
-                      {# Manage teams #}
+                      {# MANAGE TEAMS #}
                       {% if App.Users.userData.is_sysadmin and (App.Request.getScriptName|split('/')|last == 'sysconfig.php') %}
                         <div class='dropdown-item' data-action='toggle-modal' data-target='manageUsers2teamsModal_{{ user.userid }}'>
                           <i class='mr-1 fas fa-pencil fa-fw'></i>{{ 'Manage teams for user'|trans }}
@@ -207,6 +208,13 @@
                           </div>
                         {% endif %}
                       {% endif %}
+                      {# DISABLE 2FA: only for sysadmin if user has 2fa enabled #}
+                      {% if user.mfa_secret and App.Users.userData.is_sysadmin %}
+                        <div class='dropdown-item' data-action='remove-user-2fa' data-userid='{{ user.userid }}'>
+                          <i class='fas fa-fw fa-user-shield mr-1'></i>{{ 'Disable 2FA'|trans }}
+                        </div>
+                      {% endif %}
+                      {# ARCHIVE USER #}
                       {% if user.archived %}
                         <div class='dropdown-item' data-action='toggle-archive-user' data-userid='{{ user.userid }}'>
                           <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Unarchive user'|trans }}
