--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -139,7 +139,7 @@
     </textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
-      <button data-action='patch-team-common-template' data-id='{{ App.teamArr.id }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button data-action='patch-team-common-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
     <hr>
 
@@ -147,7 +147,7 @@
     <textarea style='height:400px' class='markdown-textarea form-control mt-2' name="common_template_md" id='common_template_md'>{{ App.teamArr.common_template_md|raw }}</textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
-      <button data-action='patch-team-common-template-md' data-id='{{ App.teamArr.id }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button data-action='patch-team-common-template-md' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
 
   </div>
