fix bugs on team page when nothing is bookable

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -29,7 +29,7 @@
   {{ 'Locked by %s on %s at %s'|trans|format(lockerFullname, Entity.entityData.locked_at|date('Y-m-d'), Entity.entityData.locked_at|date('H:i:s'))|raw|msg('ok', false) }}
 {% endif %}
 
-<section id='main_section'>
+<section>
 
   {# DATE and RATING #}
   <div class='d-flex'>
