fix incorrect and untranslated strings. fix #4659

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -329,7 +329,7 @@
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Experiments Status'|trans }}</h3>
   <div class='pl-3 mb-5' id='experiments_statusDiv'>
     <div class='mb-2 d-flex justify-content-between'>
-      <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
+      <p class='col-form-label'>{{ 'Create and modify the status available to experiments.'|trans }}</p>
       {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
       <div>
         <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createexperiments_statusModal'>{{ 'Create'|trans }}</button>
@@ -376,7 +376,7 @@
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Resources Status'|trans }}</h3>
   <div class='pl-3' id='items_statusDiv'>
     <div class='mb-2 d-flex justify-content-between'>
-      <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
+      <p class='col-form-label'>{{ 'Create and modify the status available to resources.'|trans }}</p>
       <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
       <div>
         <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createitems_statusModal'>{{ 'Create'|trans }}</button>
