make search help translatable. fix #4659

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -225,28 +225,28 @@
 
 <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-right fa-fw mr-2'></i>{{ 'Help'|trans }}</h3>
 <div class='mt-2' hidden data-save-hidden='advancedSearchHelpDiv'>
-  <p>Allowed Fields (<code><span class='token keyword'>field</span><span class='token punctuation'>:</span><span class='token string'>value</span></code>):</p>
+  <p>{{ 'Allowed Fields'|trans }} (<code><span class='token keyword'>{{ 'field'|trans }}</span><span class='token punctuation'>:</span><span class='token string'> {{ 'value'|trans }}</span></code>):</p>
   <div class='row'>
     <div class='col-md-6'>
       <ul class='list-unstyled'>
-        <li class='mb-2'><kbd>attachment:</kbd> yes, no, Simple or Quoted term</li>
-        <li class='mb-2'><kbd>author:</kbd> Simple or Quoted term</li>
-        <li class='mb-2'><kbd>body:</kbd> Simple or Quoted term</li>
-        <li class='mb-2'><kbd>category:</kbd> Simple or Quoted term</li>
-        <li class='mb-2'><kbd>date:</kbd> see date format</li>
-        <li class='mb-2'><kbd>elabid:</kbd> Simple or Quoted term</li>
-        <li class='mb-2'><kbd>group:</kbd> Simple or Quoted term</li>
+        <li class='mb-2'><kbd>attachment:</kbd> {{ 'yes, no, simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>author:</kbd> {{ 'simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>body:</kbd> {{ 'simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>category:</kbd> {{ 'simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>date:</kbd> {{ 'see date format'|trans }}</li>
+        <li class='mb-2'><kbd>elabid:</kbd> {{ 'simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>group:</kbd> {{ 'simple or quoted term'|trans }}</li>
       </ul>
     </div>
 
     <div class='col-md-6'>
       <ul class='list-unstyled'>
-        <li class='mb-2'><kbd>locked:</kbd> yes or no</li>
-        <li class='mb-2'><kbd>rating:</kbd> 1, 2, 3, 4, 5, or unrated or 0</li>
-        <li class='mb-2'><kbd>status:</kbd> Simple or Quoted term</li>
-        <li class='mb-2'><kbd>timestamped:</kbd> yes or no</li>
-        <li class='mb-2'><kbd>title:</kbd> Simple or Quoted term</li>
-        <li class='mb-2'><kbd>visibility:</kbd> Simple or Quoted term</li>
+        <li class='mb-2'><kbd>locked:</kbd> {{ 'yes or no'|trans }}</li>
+        <li class='mb-2'><kbd>rating:</kbd> {{ '1, 2, 3, 4, 5, or unrated or 0'|trans }}</li>
+        <li class='mb-2'><kbd>status:</kbd> {{ 'simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>timestamped:</kbd> {{ 'yes or no'|trans }}</li>
+        <li class='mb-2'><kbd>title:</kbd> {{ 'simple or quoted term'|trans }}</li>
+        <li class='mb-2'><kbd>visibility:</kbd> {{ 'simple or quoted term'|trans }}</li>
       </ul>
     </div>
   </div>
