--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -45,22 +45,17 @@
       <input type='hidden' name='auth_type' value='teaminit'>
       {{ App.Session.get('csrf')|csrf }}
       <div class='form-group mx-auto col-md-4'>
-        <label for='init_team_select' class='sr-only'>{{ 'Select a team'|trans }}</label>
-        <div class='input-group mb-2'>
-          <div class='input-group-prepend'>
-            <div class='input-group-text'>{{ 'Select a team'|trans }}</div>
-          </div>
-          <select name='team_id' class='form-control' id='init_team_select'>
-            {% for team in teamsArr|filter(v => v.visible == 1) %}
-              <option value='{{ team.id }}'>{{ team.name }}</option>
-            {% endfor %}
-          </select>
-        </div>
+        <label for='init_team_select'>{{ 'Select a team'|trans }}</label>
+        <select required name='team_id' class='form-control selectpicker' id='init_team_select' data-show-subtext='true' data-live-search='true'>
+          {% for team in teamsArr|filter(v => v.visible == 1) %}
+            <option value='{{ team.id }}'>{{ team.name }}</option>
+          {% endfor %}
+        </select>
         <label for='teaminit_firstname_input'>{{ 'Firstname'|trans }}</label>
-        <input class='form-control' name='teaminit_firstname' value='{{ App.Session.get('teaminit_firstname') }}' />
+        <input required class='form-control' name='teaminit_firstname' value='{{ App.Session.get('teaminit_firstname') }}' />
 
         <label for='teaminit_lastname_input'>{{ 'Lastname'|trans }}</label>
-        <input class='form-control' name='teaminit_lastname' value='{{ App.Session.get('teaminit_lastname') }}' />
+        <input required class='form-control' name='teaminit_lastname' value='{{ App.Session.get('teaminit_lastname') }}' />
         <button class='btn btn-primary mt-2' type='submit' name='submit'>{{ 'Request access'|trans }}</button>
       </div>
     </form>
