--- a/src/templates/view-edit-template.html
+++ b/src/templates/view-edit-template.html
@@ -129,7 +129,7 @@
     {# EDIT MODE #}
     {# TITLE #}
     <div class='d-flex mb-2 justify-content-between align-items-center'>
-      <label for='title_input' class='col-form-label mr-3 edit-mode-label'>{{ 'Title'|trans }}</label>
+      <label for='title_input' maxlength='255' class='col-form-label mr-3 edit-mode-label'>{{ 'Title'|trans }}</label>
       <input id='title_input' data-trigger='blur' data-model='{{ Entity.type }}/{{ Entity.id }}' data-target='title' class='form-control' type='text' value='{{ Entity.entityData.title|raw }}' required />
     </div>
     {# CATEGORY / STATUS #}
