--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -18,6 +18,16 @@
       <h4>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h4>
       {% include 'create-new.html' with {'entityPage': 'experiments.php'} %}
     </div>
+    {% if experimentsCategoryArr %}
+      <h5>{{ 'Browse by category'|trans }}</h5>
+      <div class='d-flex my-2'>
+        {% for category in experimentsCategoryArr %}
+        <a href='experiments.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='category-button rounded p-1 mr-2'>{{ category.title|raw }}</a>
+        {% endfor %}
+      </div>
+      <hr>
+    {% endif %}
+    <h5>{{ 'Last modified experiments'|trans }}</h5>
     <ul class='list-group mt-1'>
       {% for experiment in experimentsArr %}
       <a href='experiments.php?mode=view&id={{ experiment.id }}' class='list-group-item hl-hover-gray breakable'><span style='--bg: #{{ experiment.color }}' class='category-button rounded p-1 mr-2'>{{ experiment.mainattr_title|raw }}</span>{{ experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
@@ -29,6 +39,14 @@
       <h4>{% trans %}Resource{% plural 2 %}Resources{% endtrans %}</h4>
       {% include 'create-new.html' with {'entityPage': 'database.php'} %}
     </div>
+    <h5>{{ 'Browse by category'|trans }}</h5>
+    <div class='d-flex my-2'>
+      {% for category in categoryArr %}
+      <a href='database.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='category-button rounded p-1 mr-2'>{{ category.title|raw }}</a>
+      {% endfor %}
+    </div>
+    <hr>
+    <h5>{{ 'Last modified resources'|trans }}</h5>
     <ul class='list-group mt-1'>
       {% for item in itemsArr %}
       <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'><span style='--bg: #{{ item.color }}' class='category-button rounded p-1 mr-2'>{{ item.mainattr_title }}</span>{{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
